--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 DB= "mongodb+srv://Deepak:DeepR@2019@cluster0.wcay2.mongodb.net/Ecommerce?retryWrites=true&w=majority"
+
+JWT = "MYNAMEISDEEPAKFROMCOMPUTERSCIENCE"
